--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview --port 3002",
     "test": "vitest --no-watch",
     "e2e": "cypress run",
-    "ci:test": "vitest --no-watch && start-server-and-test dev --host 0.0.0.0 http-get://0.0.0.0:5173 e2e"
+    "ci:test": "vitest --no-watch && start-server-and-test dev --host 0.0.0.0 http-get://localhost:5173 e2e"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
