--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview --port 3002",
     "test": "vitest --no-watch",
     "e2e": "cypress run",
-    "ci:test": "vitest --no-watch && start-server-and-test dev --host 0.0.0.0 http-get://localhost:5173 e2e"
+    "ci:test": "vitest --no-watch && start-server-and-test dev http-get://192.168.1.5:5173 e2e",
+    "host":"vite --host"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
